# fetchtest

./: Cargo.toml  Makefile.toml  README.md  index.html
src/: fetchmod.rs  lib.rs
