[package]
name = "amafatt"
version = "0.1.0"
authors = ["Luciano Bestia <luciano.bestia@gmail.com>"]
edition = "2018"
description="precessa la txt di amazon e chiama la api di fattureincloud.it"

[lib]
crate-type = ["cdylib"]

[dependencies]
unwrap = "1.2.1"
dodrio = "0.1.0"
wasm-bindgen = { version = "0.2.47", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.6"
js-sys = "0.3"
serde = { version = "1.0.94", features = ["derive"] }
serde_derive = "1.0.94"
serde_json = "1.0"
futures = "0.1.26"
wasm-bindgen-futures = "0.3.24"
log = "0.4.6"
strum = "0.15.0"
strum_macros = "0.15.0"
typed-html = {version="0.2.1", features = ["dodrio_macro"]}
conv = "0.3.3"

[dependencies.web-sys]
version = "0.3.24"
features = [
  "AbortController",
  "console",
  "CssStyleDeclaration",
  "Document",
  "DomException",
  "Element",
  "ErrorEvent",
  "Event",
  "EventListener",
  "EventTarget",
  "FormData",
  "Headers",
  "HtmlElement",
  "HtmlFormElement",
  "HtmlInputElement",
  "HtmlImageElement",
  "HtmlAudioElement",
  "HtmlMediaElement",
  "Location",
  "MouseEvent",
  "Node",
  "ReferrerPolicy",
  "Request",
  "RequestCache",
  "RequestCredentials",
  "RequestInit",
  "RequestMode",
  "RequestRedirect",
  "Response",
  "Storage",
  "WebSocket",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.2.43"