[package]
name = "fetchtest"
version = "0.1.2"
authors = ["Luciano Bestia <luciano.bestia@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
#smaller wasm size
lto = true
#optimize for size 's', more opt for size 'z'
opt-level = 'z'

[dependencies]
unwrap = "1.2.1"
dodrio = "0.1.0"
wasm-bindgen = { version = "0.2.47", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.6"
js-sys = "0.3"
serde = { version = "1.0.94", features = ["derive"] }
serde_derive = "1.0.94"
serde_json = "1.0"
futures = "0.1.26"
wasm-bindgen-futures = "0.3.24"
log = "0.4.6"
strum = "0.15.0"
strum_macros = "0.15.0"
typed-html = {version="0.2.1", features = ["dodrio_macro"]}
conv = "0.3.3"

[dependencies.web-sys]
version = "0.3.24"
features = [
  "AbortController",
  "console",
  "CssStyleDeclaration",
  "Document",
  "DomException",
  "Element",
  "ErrorEvent",
  "Event",
  "EventListener",
  "EventTarget",
  "FormData",
  "Headers",
  "HtmlElement",
  "HtmlFormElement",
  "HtmlInputElement",
  "HtmlImageElement",
  "HtmlAudioElement",
  "HtmlMediaElement",
  "Location",
  "MouseEvent",
  "Node",
  "ReferrerPolicy",
  "Request",
  "RequestCache",
  "RequestCredentials",
  "RequestInit",
  "RequestMode",
  "RequestRedirect",
  "Response",
  "Storage",
  "WebSocket",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.2.43"